update script and DOM

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hw 26</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hw 26</title>
 
-  <style>
-    button{
-      cursor: pointer;
-      font-size: 100px;
-      background: none;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-  
-  <div id="parent">
-    <button id="item-1">&#128514;</button><span id="count-1">0</span>
-    <button id="item-2">&#128513;</button><span id="count-2">0</span>
-    <button id="item-3">&#128528;</button><span id="count-3">0</span>
-    <button id="item-4">&#128533;</button><span id="count-4">0</span>
-    <button id="item-5">&#128557;</button><span id="count-5">0</span>
-  </div>
+    <style>
+      button {
+        cursor: pointer;
+        font-size: 100px;
+        background: none;
+        border: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="parent">
+      <button id="item-1">&#128514;</button><span id="count-1">0</span>
+      <button id="item-2">&#128513;</button><span id="count-2">0</span>
+      <button id="item-3">&#128528;</button><span id="count-3">0</span>
+      <button id="item-4">&#128533;</button><span id="count-4">0</span>
+      <button id="item-5">&#128557;</button><span id="count-5">0</span>
+    </div>
 
-  <script src="./script.js"></script>
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
